1.16-3.0.26:
- Fixed integration between RFTools Control and RFTools Storage for the screen modules

1.16-3.0.25:
- The matter receiver and transmitter are now actually infusable

1.16-3.0.24:
- Fixed a problem with a potential crash in the matter receiver

1.16-3.0.23:
- The Analog works again

1.16-3.0.22:
- Fixed a bug in the simple dialer. It would not remember settings
- Fixed the tooltip for the Syringe
- Made the crafter gui slightly less confusing and fixed JEI integration in some cases

1.16-3.0.21:
- Bring back the ITeleportationManager API for RFTools Dimensions

1.16-3.0.20:
- Completely rewrote how the spawner handles the configuration of the spawner. These are now regular recipes that can be altered using a resourcepack

1.16-3.0.19:
- The tank works better (updates visually better when it's empty or not)
- Improved the item model for the tank

1.16-3.0.18:
- Truetype rendering works again for the screen
- Added a new 'forceNoTruetype' flag with which you can force truetype rendering to be disabled in all cases

1.16-3.0.17:
- Fixed a potential null-crash with the dimension dialer in some cases

1.16-3.0.16:
- Fixed a problem with the crafter where remembered slots were not rendered correctly

1.16-3.0.15:
- The redstone screen module works again

1.16-3.0.14:
- Fixed the broken counter again

1.16-3.0.13:
- Fixed the broken counter (wouldn't keep state on reload)

1.16-3.0.12:
- Phit fixed a problem with the spawner configuration

1.16-3.0.11:
- When the crafter is upgraded it will keep it's current settings

1.16-3.0.10:
- Made the spawner code a bit more robust (and no longer crashing) in case of an invalid syringe

1.16-3.0.9:
- Fixed the charged porter and syringe durability indicators no longer working

1.16-3.0.8:
- Syringe no longer appears in every creative tab
- Correct translation for Syringe
- Forgot the recipe for the syringe
- Update to latest McJtyLib

1.16-3.0.7-beta: