@@ -1,10 +1,13 @@
 package mcjty.rftoolsutility.setup;
 
 
+import mcjty.rftoolsutility.client.RenderGameOverlayEventHandler;
 import mcjty.rftoolsutility.modules.logic.client.DigitRenderer;
 import net.minecraft.client.renderer.texture.AtlasTexture;
 import net.minecraft.util.ResourceLocation;
+import net.minecraftforge.client.event.RenderGameOverlayEvent;
 import net.minecraftforge.client.event.TextureStitchEvent;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
 
 import static mcjty.rftoolsutility.modules.spawner.client.MatterBeamerRenderer.BLUEGLOW;
 import static mcjty.rftoolsutility.modules.spawner.client.MatterBeamerRenderer.REDGLOW;
@@ -32,4 +35,10 @@ public class ClientSetup {
 //        TankBakedModel model = new TankBakedModel();
 //        event.getModelRegistry().put(new ModelResourceLocation(new ResourceLocation(RFToolsUtility.MODID, "tank"), ""), model);
 //    }
+
+    @SubscribeEvent
+    public void renderGameOverlayEvent(RenderGameOverlayEvent evt) {
+        RenderGameOverlayEventHandler.onRender(evt);
+    }
+
 }
